plugins {
    id 'java'
    id 'application'
}

group 'com.tlc'
version '1.0'
sourceCompatibility = 11

mainClassName = 'com.tlc.Main'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10'
    testImplementation 'junit:junit:4.13.2'
}

application {
    mainClass = mainClassName
    // Open java.time for reflective access by Gson
    applicationDefaultJvmArgs = ["--add-opens", "java.base/java.time=ALL-UNNAMED"]
}
